--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "@react-navigation/bottom-tabs": "^5.3.1",
+    "@react-navigation/drawer": "^5.0.0",
+    "@react-navigation/material-top-tabs": "^5.0.0",
+    "@react-navigation/native": "^5.2.1",
+    "@react-navigation/stack": "^5.2.16",
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
